Immutable EE10 Configurations
WIP made abstract builder